Bark Button/Inventory Animations

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
       <section id="paw">
         <img src="./pawUI/top left paw.svg" alt="" />
         <img src="./pawUI/top right paw.svg" alt="" />
-        <img src="./pawUI/paw pad.svg" alt="" />
+        <img id="inventory-btn" src="./pawUI/paw pad.svg" alt="" />
         <img src="./pawUI/left paw.svg" id="left-arrow" alt="" />
         <img src="./pawUI/right paw.svg" id="right-arrow" alt="" />
       </section>
       <!-- Inventory -->
       <div id="inventory"></div>
+      <!-- Bark Button -->
+      <img src="./pawUI/bark button.svg" alt="" id="bark" />
     </main>
 
     <script type="module" src="./app.js"></script>
