Creating a level Class

--- a/index.html
+++ b/index.html
@@ -21,16 +21,26 @@
       <!-- Modals -->
       <dialog>
         <h2>Unlock Bread?</h2>
-        <section id="lock"></section>
+        <section id="lock">
+          <div class="slot"></div>
+          <div class="slot"></div>
+          <div class="slot"></div>
+          <div class="slot"></div>
+          <div class="slot"></div>
+        </section>
         <form method="dialog">
           <button>Check</button>
         </form>
       </dialog>
+      <!-- Settings -->
+      <dialog>
+        
+      </dialog>
       <!-- Controls -->
       <section id="paw">
-        <img src="./pawUI/top left paw.svg" alt="" />
-        <img src="./pawUI/top right paw.svg" alt="" />
-        <img id="inventory-btn" src="./pawUI/paw pad.svg" alt="" />
+        <img src="./pawUI/menu.svg" alt="" id="menu" />
+        <img src="./pawUI/top right paw.svg" alt="" id="hint"/>
+        <img id="inventory-btn" src="./pawUI/bag.svg" alt="" />
         <img src="./pawUI/left paw.svg" id="left-arrow" alt="" />
         <img src="./pawUI/right paw.svg" id="right-arrow" alt="" />
       </section>
