--- a/index.html
+++ b/index.html
@@ -21,28 +21,29 @@
       <!-- Modals -->
       <dialog>
         <h2>Unlock Bread?</h2>
-        <section id="lock">
-        </section>
+        <section id="lock"></section>
         <form method="dialog">
           <button>Check</button>
         </form>
       </dialog>
       <!-- Settings -->
-      <dialog>
-        
-      </dialog>
+      <dialog></dialog>
       <!-- Controls -->
       <section id="paw">
-        <img src="./pawUI/menu.svg" alt="" id="menu" />
-        <img src="./pawUI/top right paw.svg" alt="" id="hint"/>
-        <img id="inventory-btn" src="./pawUI/bag.svg" alt="" />
-        <img src="./pawUI/left paw.svg" id="left-arrow" alt="" />
-        <img src="./pawUI/right paw.svg" id="right-arrow" alt="" />
+        <img src="./assets/images/pawUI/menu.svg" alt="" id="menu" />
+        <img src="./assets/images/pawUI/top right paw.svg" alt="" id="hint" />
+        <img id="inventory-btn" src="./assets/images/pawUI/bag.svg" alt="" />
+        <img src="./assets/images/pawUI/left paw.svg" id="left-arrow" alt="" />
+        <img
+          src="./assets/images/pawUI/right paw.svg"
+          id="right-arrow"
+          alt=""
+        />
       </section>
       <!-- Inventory -->
       <div id="inventory"></div>
       <!-- Bark Button -->
-      <img src="./pawUI/bark button.svg" alt="" id="bark" />
+      <img src="./assets/images/pawUI/bark button.svg" alt="" id="bark" />
     </main>
 
     <script type="module" src="./app.js"></script>
